[package]
name = "nodo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple wrapper for running Cargo and other build tools inside a Firejail sandbox tailored to the subcommand being run and the project being acted on"
categories = ["command-line-utilities", "development-tools"]
keywords = ["security", "sandboxing", "firejail"]

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
toml = "0.5.8"

[features]
