[package]
name = "nodo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository="https://github.com/ssokolow/nodo/"
description = "A simple wrapper for running Cargo and other build tools inside a Firejail sandbox tailored to the subcommand being run and the project being acted on"
categories = ["command-line-utilities", "development-tools"]
keywords = ["security", "sandboxing", "firejail"]

[dependencies]
# Serde is used because I felt the maintainability benefit of being able to use
# declarative deserialization and type-driven programming outweighed the danger
# of depending on one of the most widely used crates in the ecosystem.
#
# However, it's also pinned at an older version until either dtolnay
# reconsiders hacking in a precompiled, non-reproducible proc macro or
# an alternative with comparable TOML support arises.
serde = { version = "1.0.190" }

# serde_derive is listed separately instead of going through serde's `derive`
# feature as a hack that parallelizes the build process more.
serde_derive = { version = "1.0.190" }

# toml_edit is used because I need *some* kind of configuration file syntax and
# it is sufficiently mature and widely used that I felt this is the best
# trade-off for maintainability. (And I might as well bypass toml-rs to reduce
# my dependency load now that it's built on toml_edit.)
toml_edit = { version = "0.21.0", features = ["serde"] }

# All the code most vulnerable to subtle bugs having outsized consequences is
# delegated to Firejail, which is absent here because it's invoked as
# a subprocess.

# Any further additions must have strong justifications, whether as crates or
# subprocesses.

[features]
